# AnimationSystem

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
src/Backend/Components/: AnimationComponent.h  CameraComponent.h
src/Backend/Handlers/TextureHandler/: TextureHandler.cpp  TextureHandler.h
src/Backend/Systems/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.h
src/Backend/Systems/AnimationSystem/Animation/: Animation.cpp  Animation.h
src/Backend/Systems/AnimationSystem/AnimationState/: AnimationState.cpp  AnimationState.h
src/Backend/Systems/AnimationSystem/AnimationStateMachine/: AnimationStateMachine.h
src/Backend/Systems/CameraSystem/: CameraSystem.cpp  CameraSystem.h
src/Backend/Systems/MovementSystem/: MovementSystem.cpp  MovementSystem.h
src/Game/: Game.cpp  Game.h
src/Game/Components/: AnimationComponent.h  EntityStateComponent.h  TransformComponent.h
src/Game/Player/: Player.cpp  Player.h
src/Game/Player/Animation/: AttackAnimation.cpp  AttackAnimation.h  IdleAnimation.cpp  IdleAnimation.h  WalkAnimation.cpp  WalkAnimation.h
src/Game/Player/Animation/AttackAnimation/: AttackAnimation.cpp  AttackAnimation.h
src/Game/Player/Animation/IdleAnimation/: IdleAnimation.cpp  IdleAnimation.h
src/Game/Player/Animation/WalkAnimation/: WalkAnimation.cpp  WalkAnimation.h
src/Game/Systems/AnimationSystem/: Animation.cpp  Animation.h  AnimationState.cpp  AnimationState.h  AnimationStateMachine.cpp  AnimationStateMachine.h  AnimationSystem.cpp  AnimationSystem.h
src/Game/Systems/MovementSystem/: MovementSystem.cpp  MovementSystem.h
